cmake_minimum_required(VERSION 3.6)
project (fpstg C CXX)

add_compile_options(-Wall -Wextra)

add_executable(fpstg fpstg.cpp)

add_executable(g0 g0.cpp)

enable_testing()
add_test(NAME add2 COMMAND fpstg ../tests/add2.dat)
set_tests_properties(add2 PROPERTIES PASS_REGULAR_EXPRESSION "Halt\r\nF:S: SELF\\|3")
add_test(NAME add3 COMMAND fpstg ../tests/add3.dat)
set_tests_properties(add3 PROPERTIES PASS_REGULAR_EXPRESSION "Halt\r\nF:S: SELF\\|6")
add_test(NAME add3b COMMAND fpstg ../tests/add3b.dat)
set_tests_properties(add3b PROPERTIES PASS_REGULAR_EXPRESSION "Halt\r\nF:S: SELF\\|6")
add_test(NAME ex-4.1 COMMAND fpstg ../tests/ex-4.1.dat)
set_tests_properties(ex-4.1 PROPERTIES PASS_REGULAR_EXPRESSION "Halt\r\nF:S: SELF\\|4")
add_test(NAME ex-4.1b COMMAND fpstg ../tests/ex-4.1b.dat)
set_tests_properties(ex-4.1b PROPERTIES PASS_REGULAR_EXPRESSION "Halt\r\nF:S: SELF\\|4")
add_test(NAME factbig COMMAND fpstg ../tests/factbig.dat)
set_tests_properties(factbig PROPERTIES PASS_REGULAR_EXPRESSION "Halt\r\nF:S: SELF\\|2432902008176640000")
add_test(NAME factorial COMMAND fpstg ../tests/factorial.dat)
set_tests_properties(factorial PROPERTIES PASS_REGULAR_EXPRESSION "Halt\r\nF:S: SELF\\|120")
add_test(NAME firstn COMMAND fpstg ../tests/firstn.dat)
set_tests_properties(firstn PROPERTIES PASS_REGULAR_EXPRESSION "Halt\r\nF:S: SELF\\|5")
add_test(NAME id COMMAND fpstg ../tests/id.dat)
set_tests_properties(id PROPERTIES PASS_REGULAR_EXPRESSION "Halt\r\nF:S: SELF\\|4")
add_test(NAME integer COMMAND fpstg ../tests/integer.dat)
set_tests_properties(integer PROPERTIES PASS_REGULAR_EXPRESSION "Halt\r\nF:S: SELF\\|1")
add_test(NAME letargs COMMAND fpstg ../tests/letargs.dat)
set_tests_properties(letargs PROPERTIES PASS_REGULAR_EXPRESSION "Halt\r\nF:S: SELF\\|102034435")
add_test(NAME letfact COMMAND fpstg ../tests/letfact.dat)
set_tests_properties(letfact PROPERTIES PASS_REGULAR_EXPRESSION "Halt\r\nF:S: SELF\\|120")
add_test(NAME sharedint COMMAND fpstg ../tests/sharedint.dat)
set_tests_properties(sharedint PROPERTIES PASS_REGULAR_EXPRESSION "Halt\r\nF:S: SELF\\|6")
add_test(NAME show5 COMMAND fpstg ../tests/show5.dat)
set_tests_properties(show5 PROPERTIES PASS_REGULAR_EXPRESSION "Halt\r\nF:S: SELF\\|102030405")
add_test(NAME show5main COMMAND fpstg ../tests/show5main.dat)
set_tests_properties(show5main PROPERTIES PASS_REGULAR_EXPRESSION "Halt\r\nF:S: SELF\\|102030405")
add_test(NAME skkid COMMAND fpstg ../tests/skkid.dat)
set_tests_properties(skkid PROPERTIES PASS_REGULAR_EXPRESSION "Halt\r\nF:S: SELF\\|3")
add_test(NAME sumsums COMMAND fpstg ../tests/sumsums.dat)
set_tests_properties(sumsums PROPERTIES PASS_REGULAR_EXPRESSION "Halt\r\nF:S: SELF\\|14")
add_test(NAME print COMMAND fpstg ../tests/print.dat)
set_tests_properties(print PROPERTIES PASS_REGULAR_EXPRESSION "Halt\r\nF:S: SELF\\|NOTPASSING")
